syntax = "proto3";

package cachepb;

option go_package = ".;pb";

message Any {
  string type_url = 1;
  bytes value = 2;
}

message SetRequest {
  string key = 1;
  Any value = 2;
}

message SetResponse { bool evicted = 1; }

message GetRequest {
    string key = 1;
  }
  
message GetResponse { Any value = 1; }

service CacheService {
  rpc Get(GetRequest) returns (GetResponse) {
  };

  rpc Set(SetRequest) returns (SetResponse) {
  };
}